fixing report css on mobile

--- a/assets/css/fishoak.css
+++ b/assets/css/fishoak.css
@@ -137,10 +137,11 @@ h1, h2, h3 {
 table {
     margin-left: auto;
     margin-right: auto;
+    table-layout: fixed;
 }
 table img{
     max-height: 300px;
-
+    max-width: 100%;
 }
 .caption {
     text-align: center;
